<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/grp1">
    <item
        android:title="@string/bbc_homepage"
        android:icon="@drawable/ic_chat"
        android:id="@+id/BBCHome"
        />
        <item
            android:title="@string/bbc_sports"
            android:icon="@drawable/ic_sports"
            android:id="@+id/BBCSports"
            />
        <item
            android:title="@string/bbc_weather"
            android:icon="@drawable/ic_weather"
            android:id="@+id/BBCWeather"
            />
        <item
            android:title="@string/bbc_music"
            android:icon="@drawable/ic_music"
            android:id="@+id/BBCMusic"
            />
        <item
            android:title="@string/bbc_work"
            android:icon="@drawable/ic_briefcase"
            android:id="@+id/BBCWork"
            />
    <item
        android:title="@string/bbc_rss_feed"
        android:icon="@drawable/ic_weather"
        android:id="@+id/RSSfeed"
        />
    </group>
    <group  android:id="@+id/grp2"
        android:checkableBehavior="single"  >
    <item
        android:title="@string/go_back_to_home_screen"
        android:icon="@drawable/ic_report"
        android:id="@+id/login"
        />

</group>
</menu>